2012-06-26  Steven Bosscher  <steven@gcc.gnu.org>

	* system.h (USE_COMMON_FOR_ONE_ONLY): Poison.
	* defaults.h (USE_COMMON_FOR_ONE_ONLY): Do not provide default.
	* config/darwin.h (USE_COMMON_FOR_ONE_ONLY): Do not define.

2012-06-26  Alexandre Oliva  <aoliva@redhat.com>

	* var-tracking.c (vt_add_function_parameter): Use a preserved
	VALUE for the MEM address of an incoming parameter.

2012-06-26  Sterling Augustine <saugustine@google.com>

	* dwarf2out.c (output_pubnames): Add check for DW_TAG_enumerator.
	(prune_unused_types): Likewise.

2012-06-26  Steven Bosscher  <steven@gcc.gnu.org>

	* system.h (UNALIGNED_SHORT_ASM_OP, UNALIGNED_INT_ASM_OP,
	UNALIGNED_LONG_ASM_OP, UNALIGNED_DOUBLE_INT_ASM_OP): Poison.
	* vmsdbgout.c (UNALIGNED_SHORT_ASM_OP, UNALIGNED_INT_ASM_OP,
	UNALIGNED_LONG_ASM_OP, UNALIGNED_DOUBLE_INT_ASM_OP): Rename to
	VMS_UNALIGNED_SHORT_ASM_OP, VMS_UNALIGNED_INT_ASM_OP,
	VMS_UNALIGNED_LONG_ASM_OP, and VMS_UNALIGNED_DOUBLE_INT_ASM_OP.
	* config/microblaze/microblaze.h (UNALIGNED_SHORT_ASM_OP,
	UNALIGNED_INT_ASM_OP, UNALIGNED_DOUBLE_INT_ASM_OP): Do not define.
	* doc/tm.texi.in: Remove UNALIGNED_INT_ASM_OP reference from the
	documentation.
	* doc/tm.texi: Regenerate.
	* doc/cpp.texi: Make example for #error generic.
	* config/frv/frv.h: Fix example text to match tm.texi.

2012-06-26  Bill Schmidt  <wschmidt@linux.ibm.com>

	* tree-pass.h (pass_strength_reduction): New decl.
	* tree-ssa-loop-ivopts.c (initialize_costs): Make non-static.
	(finalize_costs): Likewise.
	* timevar.def (TV_TREE_SLSR): New timevar.
	* gimple-ssa-strength-reduction.c: New.
	* tree-flow.h (initialize_costs): New decl.
	(finalize_costs): Likewise.
	* Makefile.in (tree-ssa-strength-reduction.o): New dependencies.
	* passes.c (init_optimization_passes): Add pass_strength_reduction.

2012-06-26  Matt Turner  <mattst88@gmail.com>

	* doc/extend.texi (__builtin_arm_tinsrb): Add missing second
	parameter.
	(__builtin_arm_tinsrh): Likewise.
	(__builtin_arm_tinsrw): Likewise.