@@ -1,3 +1,11 @@
+2012-06-26  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/sse.md (mul<VI8_AVX2>3): Change from insn_and_split
+	to expander; move guts to ...
+	* config/i386/i386.c (ix86_expand_sse2_mulvxdi3): ... here.  Add
+	highparts before shifting up.
+	* config/i386/i386-protos.h: Update.
+
 2012-06-26  Steven Bosscher  <steven@gcc.gnu.org>
 
 	* system.h (USE_COMMON_FOR_ONE_ONLY): Poison.
